Changed shortcut icon.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -5,7 +5,8 @@
   <head>
     <title>San Diego CityIQ Map</title>
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
-    <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="@routes.Assets.versioned("images/favicon.ico")">
+    <link rel="shortcut icon" type="image/vnd.microsoft.icon"
+          href="https://www.jointheleague.org/wp-content/uploads/2017/06/favicon-icon.png">
     <link rel="import" href="@routes.Assets.versioned("javascripts/google-map/google-map.html")">
   </head>
   <body>
