Added webcomponents.js reference back, since non-Chrome browsers seem to need it.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -9,6 +9,7 @@
           href="https://www.jointheleague.org/wp-content/uploads/2017/06/favicon-icon.png">
   </head>
   <body>
+    <script type="text/javascript" src="@routes.Assets.versioned("javascripts/webcomponentsjs/webcomponents-lite.min.js")"></script>
     <script type="text/javascript" src="@routes.Assets.versioned("javascripts/app.elm.js")"></script>
     <script type="text/javascript">
       let app = Elm.Main.fullscreen();
